# AT2XT

./: .gitattributes  .gitignore  .travis.yml  AT2XTv110_BOM.csv  CHANGELOG.md  Cargo.toml  Justfile  Makefile  README.md  Xargo.toml  at2xtv200_BOM.csv  build.rs  memory.x  msp430.json
.cargo/: config
.github/: renovate.json
.github/workflows/: ci.yml
board/: .gitignore  at2xt.kicad_pcb  at2xt.kicad_pro  at2xt.kicad_sch  fp-lib-table
board/at2xt.pretty/: DIN41524-5-2MP_20.5mmx15.5mm_P7.5mm_P10.0mm_MP10.0mm.kicad_mod  MiniDIN-6-3MP_14.0mmx12.9mm_P2.6mm_P6.8mm_MP6.75mm.kicad_mod
gerber/: BoardOutline.gbr  Bottom.gbr  BottomMask.gbr  BottomPaste.gbr  Through.drl  Top.gbr  TopMask.gbr  TopPaste.gbr  TopSilk.gbr  at2xt-B_Cu.gbl  at2xt-B_Mask.gbs  at2xt-B_Paste.gbp  at2xt-B_Silkscreen.gbo  at2xt-Edge_Cuts.gm1  at2xt-F_Cu.gtl  at2xt-F_Mask.gts  at2xt-F_Paste.gtp  at2xt-F_Silkscreen.gto  at2xt.drl
legacy-src/: .gitignore  AT2XT.h  AT2XT_FSM.c  AT2XTmain.c  ATcommands.h  Makefile  Makefile.clang  include.mk.sample  msp430g2211.h  msp430g2211.ld  msp430g2211_symbols.ld
legacy-src/XTATKEY/: MACLIB.INC  XTATKEY.ASM  XTATKEY.HEX  XTATKEY.SCH  XTTRANS.INC
sch/: AT2XT.asc
src/: AT2XT_FSM.c  AT2XTmain.c  atkey.rs  driver.rs  interrupt.rs  keybuffer.rs  keyfsm.rs  keymap.rs  main.rs  peripheral.rs  util.rs
