[package]
name = "at2xt"
version = "4.0.0"
authors = ["William D. Jones <thor0505@comcast.net>"]
edition = "2018"

[dependencies.bare-metal]
version = "0.2.0"

[dependencies.msp430]
version = "0.2.0"

[dependencies.bit_reverse]
version = "0.1.7"
default_features = false

[dependencies.msp430-rt]
version = "0.2.4"

[dependencies.msp430g2211]
version = "0.2.0"
features = ["rt"]

[dependencies.msp430-atomic]
version = "0.1.0"

[dependencies.panic-msp430]
version = "0.2.0"

[dependencies.once_cell]
version = "1.2.0"
default_features = false

[dependencies.bitflags]
version = "1.2.1"

# Required for `xargo fix`.
[[bin]]
name = "at2xt"
test = false
bench = false

[profile.dev]
debug-assertions = false
overflow-checks = false
codegen-units = 1
opt-level = "s"
incremental = false
lto = "fat"

[profile.release]
codegen-units = 1
opt-level = "s"
lto = "fat"
