[package]
name = "at2xt"
version = "4.1.0"
authors = ["William D. Jones <thor0505@comcast.net>"]
edition = "2018"

[dependencies.bare-metal]
version = "1.0.0"

[dependencies.msp430]
version = "0.3.0"

[dependencies.bit_reverse]
version = "0.1.7"
default_features = false

[dependencies.msp430-rt]
version = "0.3.1"

[dependencies.msp430g2211]
version = "0.3.0"
features = ["rt"]

[dependencies.portable-atomic]
version = "0.3.13"

[dependencies.panic-msp430]
version = "0.3.0"

[dependencies.once_cell]
version = "1.7.0"
default_features = false

[dependencies.bitflags]
version = "1.2.1"

# Required for `cargo fix`.
[[bin]]
name = "at2xt"
test = false
bench = false

[profile.dev]
debug-assertions = false
overflow-checks = false
codegen-units = 1
opt-level = "s"
incremental = false
lto = "fat"

[profile.release]
codegen-units = 1
opt-level = "s"
lto = "fat"
