[package]
name = "at2xt"
version = "4.2.0"
authors = ["William D. Jones <thor0505@comcast.net>"]
edition = "2018"

[dependencies.critical-section]
git = "https://github.com/cr1901/msp430-cs"
version = "1.1.0"
branch = "msp430-cs"

[dependencies.msp430]
version = "0.4.1"

[dependencies.bit_reverse]
version = "0.1.8"
default_features = false

[dependencies.msp430-rt]
version = "0.4.0"

[dependencies.msp430g2211]
version = "0.4.0"
features = ["critical-section", "rt"]

[dependencies.portable-atomic]
version = "1.6.0"

[dependencies.panic-msp430]
version = "0.4.0"

[dependencies.once_cell]
version = "1.19.0"
default_features = false

[dependencies.bitflags]
version = "2.4.2"

# Required for `cargo fix`.
[[bin]]
name = "at2xt"
test = false
bench = false

[profile.dev]
debug-assertions = false
overflow-checks = false
codegen-units = 1
opt-level = "s"
incremental = false
lto = "fat"

[profile.release]
codegen-units = 1
opt-level = "s"
lto = "fat"

[patch.crates-io]
critical-section = { git = "https://github.com/cr1901/msp430-cs", version = "1.1.0", branch = "msp430-cs" }
